# Gateway-Smart-Contracts

./: .env.prod  .gitignore  commands.sh  package-lock.json  package.json  tsconfig.json
contract/: Cargo.toml  build.sh  deploy.sh
contract/neardev/: dev-account  dev-account.env
contract/src/: burn.rs  enumeration.rs  events.rs  internal.rs  lib.rs  metadata.rs  nft_core.rs  series.rs  tests.rs
integration-tests/: package-lock.json  package.json
integration-tests/src/: sandbox.ava.js  sandbox.ava.ts  utils.js  utils.ts
scripts/src/: burnNFTInBatch.ts  config.ts  createCollection.ts  deploy.ts  main.ts  mintNFT.ts  mintNFTInBatch.ts  utils.ts  withdrawNFT.ts
scripts/src/contracts/: GatewayNFTMarketplace.ts
