[package]
name = "gateway_nft_marketplace"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = {version = "4.0.0", features = ["unstable"]}
serde_json = "1.0"
ed25519-dalek="1.0.1"
bs58 = "0.4.0"


uint = { version = "0.9.3", default-features = false }

[dev-dependencies]



# [profile.release]
# codegen-units = 1
# opt-level = "z"
# lto = true
# debug = false
# panic = "abort"
# overflow-checks = true

# [workspace]
# members = []
